TRACK-648 Automatically create seed bank
By default, creating a new organization now automatically creates a project
(hidden, organization-wide), site, and facility, all called "Seed Bank." The
client can pass an optional parameter to disable creating the seed bank.

Since organizations don't have location data, there isn't a sensible value to
use as the location for the site. We weren't really doing anything with the
site location anyway, so it is no longer a required field.
